--- a/index.html
+++ b/index.html
@@ -1,162 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lora&display=swap"
-      rel="stylesheet"
-    />
-    <title>namedmichi Projekt Overview</title>
-  </head>
-  <body>
-    <div class="wrapper">
-      <!-- Head -->
-      <div class="head">
-        <div class="h1"><h1>namedmichi Seiten</h1></div>
-      </div>
-      <!-- Content -->
-      <div class="content">
-        <!-- Body -->
-        <div class="body">
-          <!-- Container für Seiten -->
-          <div class="seitenContainer">
-            <div class="seiten-block tright">
-              <div class="img">
-                <img src="gitpage-images/woinderwelt.png" alt="" />
-              </div>
-              <div class="seiten">
-                <a href="angular-test/firstTest/docs/">Wo in der Welt</a>
-                <p>Erstes Angular Projekt(WIP)</p>
-              </div>
-            </div>
-            <div class="seiten-block iright">
-              <div class="seiten">
-                <a href="rock-paper-scissors-master\index.html"
-                  >Schere Stein Papier <br />(Frontend Mentor)</a
-                >
-                <p>JavaScript</p>
-              </div>
-              <div class="img">
-                <img src="gitpage-images/scheresteinpapier.png" alt="" />
-              </div>
-            </div>
-            <div class="seiten-block tright">
-              <div class="img">
-                <img src="gitpage-images/sneaker.png" alt="" />
-              </div>
-              <div class="seiten">
-                <a href="ecommerce-product-page-main\index.html"
-                  >Sneaker (Frontend Mentor)</a
-                >
-                <p>Responsive JavaScript</p>
-              </div>
-            </div>
-            <div class="seiten-block iright">
-              <div class="seiten">
-                <a href="uebungen.23\google\google.html">Google Fake</a>
-                <p>Responsive</p>
-              </div>
-              <div class="img">
-                <img src="gitpage-images/google.png" alt="" />
-              </div>
-            </div>
-            <div class="seiten-block tright">
-              <div class="img">
-                <img src="gitpage-images/web3.png" alt="" />
-              </div>
-              <div class="seiten">
-                <a href="news-homepage-main\index.html"
-                  >Web 3.0 (Frontend Mentor)</a
-                >
-                <p>Responsive</p>
-              </div>
-            </div>
-            <div class="seiten-block iright">
-              <div class="seiten">
-                <a href="clipboard-landing-page-master\index.html"
-                  >Clipboard(Frontend Mentor)</a
-                >
-                <p>JavaScript</p>
-              </div>
-              <div class="img">
-                <img src="gitpage-images/clipboard.png" alt="" />
-              </div>
-            </div>
-            <div class="seiten-block tright">
-              <div class="img">
-                <img src="gitpage-images/huddle.png" alt="" />
-              </div>
-              <div class="seiten">
-                <a
-                  href="huddle-landing-page-with-alternating-feature-blocks-master\index.html"
-                  >Huddle(Frontend Mentor)</a
-                >
-                <p>Test</p>
-              </div>
-            </div>
-            <div class="seiten-block iright">
-              <div class="seiten">
-                <a href="site\haupt.html">Chiemgau48 Zeitung</a>
-                <p>Erstes "Projekt"</p>
-              </div>
-              <div class="img">
-                <img src="gitpage-images/chiemgau.png" alt="" />
-              </div>
-            </div>
-            <div class="seiten-block tright">
-              <div class="img">
-                <img src="gitpage-images/Web.png" alt="" />
-              </div>
-              <div class="seiten">
-                <a href="webentwicklerkurs-site\site.html">Webentwicklerkurs</a>
-                <p>Responsive</p>
-              </div>
-            </div>
-          </div>
-          <!-- Container für Seiten -->
-        </div>
-        <!-- Footer -->
-        <div class="footer">
-          <footer>
-            <div class="fo-block logo">
-              <img src="images/logo.svg" alt="" />
-            </div>
-            <div class="fo-block">
-              <div class="fo-text">
-                <a href="https://github.com/namedmichi">Github</a>
-              </div>
-            </div>
-            <div class="fo-block">
-              <div class="fo-text">
-                <a
-                  href="https://github.com/namedmichi/workspacestudio/blob/master/README.md"
-                  >README</a
-                >
-              </div>
-            </div>
-            <div class="fo-block">
-              <div class="fo-text install"><a href="">Kontakt</a></div>
-            </div>
-            <div class="fo-block">
-              <img src="gitpage-images/icon-instagram.svg" alt="" />
-            </div>
-          </footer>
-        </div>
-        <!-- Footer -->
-      </div>
-      <!-- Content -->
-    </div>
-    <!-- Wrapper -->
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Lora&display=swap"
+			rel="stylesheet"
+		/>
+		<title>namedmichi Projekt Overview</title>
+	</head>
+	<body>
+		<div class="wrapper">
+			<!-- Head -->
+			<div class="head">
+				<div class="h1"><h1>namedmichi Seiten</h1></div>
+			</div>
+			<!-- Content -->
+			<div class="content">
+				<!-- Body -->
+				<div class="body">
+					<!-- Container für Seiten -->
+					<div class="seitenContainer">
+						<div class="seiten-block iright">
+							<div class="seiten">
+								<a
+									href="https://namedmichi.github.io/ToDoManager/"
+									>namedTask ToDoManager <br
+								/></a>
+								<p>(WIP)</p>
+								<p>Angular</p>
+							</div>
+							<div class="img">
+								<img
+									src="gitpage-images/namedTask.png"
+									alt=""
+								/>
+							</div>
+						</div>
+						<div class="seiten-block tright">
+							<div class="img">
+								<img
+									src="gitpage-images/woinderwelt.png"
+									alt=""
+								/>
+							</div>
+							<div class="seiten">
+								<a href="angular-test/firstTest/docs/"
+									>Wo in der Welt</a
+								>
+								<p>Erstes Angular Projekt</p>
+							</div>
+						</div>
+						<div class="seiten-block iright">
+							<div class="seiten">
+								<a href="rock-paper-scissors-master\index.html"
+									>Schere Stein Papier <br />(Frontend
+									Mentor)</a
+								>
+								<p>JavaScript</p>
+							</div>
+							<div class="img">
+								<img
+									src="gitpage-images/scheresteinpapier.png"
+									alt=""
+								/>
+							</div>
+						</div>
+						<div class="seiten-block tright">
+							<div class="img">
+								<img src="gitpage-images/sneaker.png" alt="" />
+							</div>
+							<div class="seiten">
+								<a href="ecommerce-product-page-main\index.html"
+									>Sneaker (Frontend Mentor)</a
+								>
+								<p>Responsive JavaScript</p>
+							</div>
+						</div>
+						<div class="seiten-block iright">
+							<div class="seiten">
+								<a href="uebungen.23\google\google.html"
+									>Google Fake</a
+								>
+								<p>Responsive</p>
+							</div>
+							<div class="img">
+								<img src="gitpage-images/google.png" alt="" />
+							</div>
+						</div>
+						<div class="seiten-block tright">
+							<div class="img">
+								<img src="gitpage-images/web3.png" alt="" />
+							</div>
+							<div class="seiten">
+								<a href="news-homepage-main\index.html"
+									>Web 3.0 (Frontend Mentor)</a
+								>
+								<p>Responsive</p>
+							</div>
+						</div>
+						<div class="seiten-block iright">
+							<div class="seiten">
+								<a
+									href="clipboard-landing-page-master\index.html"
+									>Clipboard(Frontend Mentor)</a
+								>
+								<p>JavaScript</p>
+							</div>
+							<div class="img">
+								<img
+									src="gitpage-images/clipboard.png"
+									alt=""
+								/>
+							</div>
+						</div>
+						<div class="seiten-block tright">
+							<div class="img">
+								<img src="gitpage-images/huddle.png" alt="" />
+							</div>
+							<div class="seiten">
+								<a
+									href="huddle-landing-page-with-alternating-feature-blocks-master\index.html"
+									>Huddle(Frontend Mentor)</a
+								>
+								<p>Test</p>
+							</div>
+						</div>
+						<div class="seiten-block iright">
+							<div class="seiten">
+								<a href="site\haupt.html">Chiemgau48 Zeitung</a>
+								<p>Erstes "Projekt"</p>
+							</div>
+							<div class="img">
+								<img src="gitpage-images/chiemgau.png" alt="" />
+							</div>
+						</div>
+						<div class="seiten-block tright">
+							<div class="img">
+								<img src="gitpage-images/Web.png" alt="" />
+							</div>
+							<div class="seiten">
+								<a href="webentwicklerkurs-site\site.html"
+									>Webentwicklerkurs</a
+								>
+								<p>Responsive</p>
+							</div>
+						</div>
+					</div>
+					<!-- Container für Seiten -->
+				</div>
+				<!-- Footer -->
+				<div class="footer">
+					<footer>
+						<div class="fo-block logo">
+							<img src="images/logo.svg" alt="" />
+						</div>
+						<div class="fo-block">
+							<div class="fo-text">
+								<a href="https://github.com/namedmichi"
+									>Github</a
+								>
+							</div>
+						</div>
+						<div class="fo-block">
+							<div class="fo-text">
+								<a
+									href="https://github.com/namedmichi/workspacestudio/blob/master/README.md"
+									>README</a
+								>
+							</div>
+						</div>
+						<div class="fo-block">
+							<div class="fo-text install">
+								<a href="">Kontakt</a>
+							</div>
+						</div>
+						<div class="fo-block">
+							<img
+								src="gitpage-images/icon-instagram.svg"
+								alt=""
+							/>
+						</div>
+					</footer>
+				</div>
+				<!-- Footer -->
+			</div>
+			<!-- Content -->
+		</div>
+		<!-- Wrapper -->
+	</body>
 </html>
