--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+	<script src="counterScript.js"></script>
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -30,6 +31,40 @@
 				<!-- Body -->
 				<div class="body">
 					<!-- Container für Seiten -->
+					<div class="stats">
+						<h2 class="statsTitel" style="font-size: 2.3rem">
+							namedmichi/workspacestudio
+						</h2>
+						<div class="statsFlex">
+							<div class="htmlStats textRight">
+								<h2>HTML</h2>
+								<p id="htmlChars">Zeichen:&nbsp;</p>
+								<p id="htmlWords">Wörter:&nbsp;</p>
+								<p id="htmlLines">Zeilen:&nbsp;</p>
+							</div>
+							<div class="cssStats textLeft">
+								<h2>CSS</h2>
+								<p id="cssChars">Zeichen:&nbsp;</p>
+								<p id="cssWords">Wörter:&nbsp;</p>
+								<p id="cssLines">Zeilen:&nbsp;</p>
+							</div>
+						</div>
+						<div class="statsFlex">
+							<div class="jsStats textRight">
+								<h2>JavaScript</h2>
+								<p id="jsChars">Zeichen:&nbsp;</p>
+								<p id="jsWords">Wörter:&nbsp;</p>
+								<p id="jsLines">Zeilen:&nbsp;</p>
+							</div>
+							<div class="tsStats textLeft">
+								<h2>TypeScript</h2>
+								<p id="tsChars">Zeichen:&nbsp;</p>
+								<p id="tsWords">Wörter:&nbsp;</p>
+								<p id="tsLines">Zeilen:&nbsp;</p>
+							</div>
+						</div>
+					</div>
+
 					<div class="seitenContainer">
 						<div class="seiten-block iright">
 							<div class="seiten">
