--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<div class="seiten-block iright">
 							<div class="seiten">
 								<a
-									href="https://namedmichi.github.io/ToDoManager/"
+									href="https://namedmichi.github.io/namedTask/"
 									>namedTask ToDoManager <br
 								/></a>
 								<p>(WIP)</p>
