--- a/wetterapp neu/index.html
+++ b/wetterapp neu/index.html
@@ -9,7 +9,7 @@
 		<h1>Wettervorhersage</h1>
 
 		<input type="text" id="stadt" placeholder="Ort eingeben" required />
-		<button id="wetterButton" type="submit">Wetter anzeigen</button>
+		<button onclick="getWeather()" id="wetterButton" type="submit">Wetter anzeigen</button>
 
 		<div id="aktuellesWetter"></div>
 		<div id="wetterTabelle"></div>
